--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.5.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/big-shoulders-text": "^5.0.19",
+    "@fontsource/poiret-one": "^5.0.19",
     "astro": "^4.4.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
